# scanner-controller

./: .flake8  .flake8.txt  .gitignore  .pre-commit-config.yaml  LICENSE  MIGRATION_GUIDE.md  PI.md  README.md  __init__.py  analyze_unused_files.py  analyze_unused_imports.py  build_dependency_graph.py  cleanup_legacy.py  commandLibrary.py  commandRegistry.py  command_registry.py  dependencies.txt  fix_docstrings_ast.py  format_code.py  llm_config.json  main.py  migrate_legacy_adapters.py  organize_utilities.py  pyproject.toml  pytest.ini  readlineSetup.py  rename_methods.py  requirements-dev.txt  requirements-dev.txtpip  requirements.txt  run_flake8.bat  run_flake8.py  run_scanner_gui.py  run_utility.py  scan_legacy_adapters.py  scannerGUI.py  scannerUtils.py  setup.cfg  setup_bc125at.sh  setup_testing.py  (+6 more)
.github/: FUNDING.yml
adapter_scanner/: adapter_ardv1.py  adapter_bc125at.py  adapter_bcd325p2.py  adapter_sds100.py  base_adapter.py  scanner_utils.py  scanner_utils_uniden.py
adapters/: base_adapter.py
command_libraries/: __init__.py  base_command.py
config/: __init__.py  band_scope_presets.py  boondock_echo.py  step_size_defaults.py
dev_tools/: MIGRATION_GUIDE.md  README.md  __init__.py  analyze_unused_files.py  analyze_unused_imports.py  build_dependency_graph.py  cleanup_legacy.py  migrate_legacy_adapters.py  organize_utilities.py  run_utility.py  scan_legacy_adapters.py  test_dev_requirements.sh
docs/: README.md  directory_structure.md  project_structure.md
library_scanner/: adapter.py  bc125atCommandLibrary.py  bc125at_command_library.py  bcd325p2CommandLibrary.py  bcd325p2_command_library.py  sds100CommandLibrary.py  uniden_tone_lut.py
manuals/: BCD325P2_Remote_Protocol_ver_1_02.txt
oldgui/: scannerGui.py
pi/: app.py
scanner_gui/: __init__.py  (+6 more)
(+331 files in other folders)
