[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner-controller"
version = "0.1.0"
dependencies = [
    "attrs==25.3.0",
    "iso8601==2.1.0",
    "packaging==24.2",
    "psutil==7.0.0",
    "PyQt6==6.9.0",
    "PyQt6-Qt6==6.9.0",
    "PyQt6_sip==13.10.0",
    "pyserial==3.5",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
hid = ["hid==1.0.*"]
sdr = [
    "pyrtlsdr",
    "SoapySDR",
    "SoapyRTLSDR",
]

[tool.setuptools.packages.find]
include = ["scanner_controller", "scanner_controller.*"]
exclude = ["logs", "tests"]

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | \.pytest_cache
  | \.github
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
)
'''
skip-string-normalization = true
skip-magic-trailing-comma = true
check = false
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv/*", ".pytest_cache/*", ".github/*", "__pycache__/*"]

