[flake8]
max-line-length = 80
extend-ignore = E203,I
exclude =
    .venv,
    .venv/*,
    .venv/**,
    venv,
    venv/*,
    .git,
    __pycache__,
    .pytest_cache,
    .github,
    build,
    dist
per-file-ignores =
    __init__.py:F401

[isort]
profile = black
line_length = 80
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[options.extras_require]
hid =
    hid==1.0.*
